assets/css/main.css
@font-face {
  font-family: Fredoka;
  src: url("/fonts/Fredoka-Regular.ttf") format("truetype");
}

@font-face {
  font-family: Fredoka;
  font-weight: bold;
  src: url("/fonts/Fredoka-SemiBold.ttf") format("truetype");
}

@font-face {
  font-family: Fredoka;
  font-weight: 500;
  src: url("/fonts/Fredoka-Medium.ttf") format("truetype");
}

body {
  height: 100%;
  width: 100%;
  background: var(--bs-secondary);
}

:root {
  --bs-body-font-family: fredoka;

  scrollbar-color: var(--bs-primary) var(--bs-secondary);
  scrollbar-width: auto;
  scroll-behavior: unset;
}

*::-webkit-scrollbar {
  width: 8px;
}

*::-webkit-scrollbar-track {
  background-color: var(--bs-secondary);
}

*::-webkit-scrollbar-thumb {
  height: 56px;
  border-radius: 8px;
  border: 0 solid transparent;
  background-clip: content-box;
  background-color: var(--bs-primary);
}

*::-webkit-scrollbar-thumb:hover {
  background-color: var(--bs-primary);
}

::selection {
  background: var(--bs-primary);
  color: var(--bs-secondary);
}

img {
  pointer-events: auto;
  user-select: none;
}

a {
  font-weight: 500;
  text-decoration: dashed underline;
  text-decoration-thickness: 1px;
  text-decoration-color: var(--bs-secondary);
}

a:hover {
  text-decoration: underline;
}

.nuxt-loading-indicator {
  background: repeating-linear-gradient(to right, var(--bs-primary-hover) 0%, var(--bs-primary) 50%, var(--bs-secondary) 100%)!important;
  box-shadow: 0 0 10px rgb(255 255 255 / 50%);
}

.geosearch {
  list-style-type: none;
  max-height: 300px;
  overflow-y: auto;
  z-index: 10;
}

.hover:hover {
  background-color: var(--bs-tertiary-bg)!important;
}

main {
  width: 100%;
}

.image-upload>input {
  display: none;
}


.image-upload label .overlay {
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}


.image-upload label:hover .overlay {
  opacity: .85;
}

.accordion-button:hover {
  background-color: var(--bs-tertiary-bg);
}

.accordion-button:not(.collapsed) {
  color: var(--bs-body-color);
  background-color: var(--bs-secondary);
  border: 1px solid var(--bs-primary);
  border-color: var(--bs-primary);
}

.accordion-button:focus {
  box-shadow: unset;
}

.accordion {
  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff6969'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}

.map-story {
  background-size: cover;
  border-radius: 50%;
  background-position: center;
  width: 75px;
  height: 75px;
}

.bond-heart {
  font-size: calc(4rem + 1vw);
}

.offcanvas-bottom {
  transition: height .3s ease-in-out;
}

.select-list {
  max-height: 300px;
  overflow: auto;
}

.select-list li {
  list-style: none;
}

.select-list li:hover {
  background-color: var(--bs-tertiary-bg);
}

